# git-rewind

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: ai.rs  config.rs  git.rs  main.rs  provider.rs
src/ai/: client.rs  mod.rs  models.rs  prompts.rs
